--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active"><a class="nav-link" href="index.html">首页</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">关于世宁</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">专业领域</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">专业人员</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">新闻评论</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">招贤纳士</a></li>
+                        <li class="nav-item"><a class="nav-link" href="aboutus.html">关于世宁</a></li>
+                        <li class="nav-item"><a class="nav-link" href="applications.html">专业领域</a></li>
+                        <li class="nav-item"><a class="nav-link" href="prof-all.html">专业人员</a></li>
+                        <li class="nav-item"><a class="nav-link" href="newscomments.html">新闻评论</a></li>
+                        <li class="nav-item"><a class="nav-link" href="recruits.html">职业发展</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact-us.html">联系我们</a></li>
                     </ul>
                     <ul class="navbar-nav justify-content-end">
                         <li><a href="#"><i class="icon_search"></i></a></li>
-                        <li><a href="#"><i class="social_linkedin"></i></a></li>
+                        <li><a>中 | </a><a href="./en/index.html" onclick="">EN</a></li>
                     </ul>
                 </div>
             </nav>
@@ -100,9 +100,9 @@
                             data-responsive_offset="on"
                             data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:0px;s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]"
                             data-textAlign="['center','center','center','center','center','center']"
-                            style="z-index: 8;font-family: 'Poppins', sans-serif;font-weight:600;color:#fff;text-transform: uppercase;"><img src="img/play-video.png" alt=""> <span style="text-decoration: underline;padding-left: 10px;">请观看我们的介绍</span></div>
+                            style="z-index: 8;font-family: 'Poppins', sans-serif;font-weight:600;color:#fff;text-transform: uppercase;"></div>
 
-                            <!-- LAYER NR. 10 -->
+                            <!-- LAYER NR. 10
                             <div class="tp-caption   tp-resizeme tp-videolayer"
                             id="slide-2971-layer-15"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
@@ -122,6 +122,7 @@
                             data-lasttriggerstate="reset"           data-autoplay="off"
                             data-volume="100"
                             style="z-index: 14;text-transform:left;border-width:0px;"> </div>
+                            -->
 
                             <!-- LAYER NR. 11 -->
                             <div class="tp-caption Agency-CloseBtn rev-btn "
@@ -301,7 +302,7 @@
                         <div class="col-lg-6">
                             <div class="d_feature_text">
                                 <div class="main_title">
-                                    <h2>世宁专注于为全球客户提供<br/>高品质、全方位的法律解决方案</h2>
+                                    <h2>世宁概况</h2>
                                 </div>
                                 <p>世宁致力于处理复杂的知识产权、反垄断及商业争议，尤其擅长处理涉及前沿技术的专利、商业秘密、知识产权许可，以及新商业模式下反垄断、反不正当竞争、数据安全等争议解决、合规风控和跨境谈判。</p>
                                 <p>我们是知识产权领域的专家，由背景多样兼具丰富实践经验的资深从业者组成。我们的律师因服务客户的专业态度、精专的法律知识技能及丰富的实践经验而获得认可。</p>
