--- a/index01.html
+++ b/index01.html
@@ -63,7 +63,7 @@
                         <li class="nav-item"><a  href="static.html">专业领域</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">专业人员</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">新闻评论</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">招贤纳士</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">职业发展</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact-us.html">联系我们</a></li>
                     </ul>
                     <ul class="navbar-nav justify-content-end">
