--- a/contact-us.html
+++ b/contact-us.html
@@ -56,17 +56,17 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active"><a class="nav-link" href="index.html">首页</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">关于世宁</a></li>
-                        <li class="nav-item"><a  href="static.html">专业领域</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">专业人员</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">新闻评论</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">招贤纳士</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact-us.html">联系我们</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html">首页</a></li>
+                        <li class="nav-item"><a class="nav-link" href="aboutus.html">关于世宁</a></li>
+                        <li class="nav-item"><a class="nav-link" href="applications.html">专业领域</a></li>
+                        <li class="nav-item"><a class="nav-link" href="prof-all.html">专业人员</a></li>
+                        <li class="nav-item"><a class="nav-link" href="newscomments.html">新闻评论</a></li>
+                        <li class="nav-item"><a class="nav-link" href="recruits.html">职业发展</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="contact-us.html">联系我们</a></li>
                     </ul>
                     <ul class="navbar-nav justify-content-end">
                         <li><a href="#"><i class="icon_search"></i></a></li>
-                        <li><a href="#"><i class="social_linkedin"></i></a></li>
+                        <li><a>中 | </a><a href="./en/index.html" onclick="">EN</a></li>
                     </ul>
                 </div>
             </nav>
